Fixed the z-index issue on the testimonials

--- a/public/styles/base.sass
+++ b/public/styles/base.sass
@@ -771,11 +771,14 @@ header
                       color: #555
                       padding: 20px
                       position: relative
+                      min-height: 100px
                       .name
                           font-weight: bold
                           padding-bottom: 10px
                       .position
                           font-size: .85rem
+                          position: relative
+                          z-index: 1
                       .icon
                           color: $theme
                           font-size: 3rem
